--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Catharine-Furze_6023
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: White, William Hale
@@ -13,6 +16,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1904
     wikipedia: http://en.wikipedia.org/wiki/William_Hale_White
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/6023#Catharine-Furze
 gutenberg_issued: '2004-07-01'
 gutenberg_type: Text
 identifiers:
